completed till contact

--- a/media.css
+++ b/media.css
@@ -35,6 +35,28 @@
         flex-direction: column;
         gap: 10px;
     }
+    /* food menu */
+    .food-menu-item{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    /* testimonial */
+    .testimonial-container{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    /* contact */
+    .contact-container{
+        display: block;
+    }
+    .contact-img, .form-container{
+        width: 100%;
+    }
 }
 @keyframes slide {
     0%{
