--- a/style.css
+++ b/style.css
@@ -252,3 +252,152 @@ body{
 
     color: #fff;
 }
+/* food menu style */
+#food-menu{
+    padding: 5rem 0px;
+    background-color: var(--bg-light);
+  }
+  .food-menu-heading{
+    text-align: center;
+    font-size: 3.5rem;
+    font-weight: 500;
+    color: var(--primary);
+  }
+  .food-menu-container{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px 0px 30px 0px;
+  }
+  .food-menu-item{
+    display: flex;
+    flex: 1 1 600px;
+    justify-content: space-evenly;
+    margin-bottom: 3rem;
+  }
+  .food-menu-item .food-img img{
+    display: block;
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
+  }
+  .food-description{
+    margin: auto 1.4rem;
+  }
+  .food-title{
+    font-size: 2rem;
+    color: var(--primary);
+    font-weight: 600;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+  }
+  /* testimonials */
+  #testimonials{
+    padding: 5rem 0;
+  }
+  .testimonial-title{
+    text-align: center;
+    font-size: 3.5rem;
+    color: var(--primary);
+    font-weight: 500;
+  }
+  .testimonial-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 1.4rem;
+    padding: 1rem;
+  }
+  .testimonial-box{
+    text-align: center;
+    padding: 1rem;
+  }
+  .testimonial-box img{
+    display: block;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+    margin: auto;
+    border-right: 5px solid var(--primary);
+  }
+
+  .checked{
+    color: var(--primary);
+  }
+  .unchecked{
+    color: var(--unchecked);
+  }
+  .testimonial-txt{
+    color: var(--unchecked);
+    text-align: justify;
+    font-size: 1.1 rem;
+    text-indent: 50px;
+    word-break: break-all;
+  }
+
+  /* contact */
+  #contact{
+    padding: 5rem 0;
+  }
+  .contact-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 20px;
+  }
+  .contact-title{
+    font-size: 3.5rem;
+    color: var(--primary);
+    text-align: center;
+    font-weight: 500;
+  }
+  .contact-img{
+    width: 50%;
+
+
+  }
+  .contact-container .contact-img img{
+    display: block;
+    max-width: 100%;
+    height: 400px;
+  }
+
+  .form-container{
+    padding: 1rem;
+    width: 50%;
+    margin: auto;
+  }
+  .form-container .input-item{
+    display: block;
+    border: 2px solid;
+    width: 100%;
+    outline: none;
+    padding: 1rem;
+    font-size: 0.9rem;
+    border-radius: 10px;
+    text-indent: 10px;
+    margin-top: 0.5rem;
+    color: var(--primary);
+    font-weight: 400;
+  }
+  .form-container .form-item{
+    display: block;
+    padding: 10px;
+
+  }
+
+  .food-container .form-item label{
+    font-size: 1.1 rem;
+    font-weight: 600;
+    color: var(--primary);
+  }
+  .btn-danger{
+    background-color: var(--danger);
+  }
+  .btn{
+    cursor: pointer;
+    width: 120px;
+    border: none;
+    color: var(--white);
+  }
